Fix SonarCloud properties and remove deprecated language key

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,13 +1,13 @@
 # .sonarcloud.properties
+
+# === Mandatory configuration ===
 sonar.organization=akshat200519
 sonar.projectKey=akshat200519_code_quality2
 
-# --- Optional Configuration ---
-# Comma-separated paths to sources
-sonar.sources=.
+# === Optional configuration ===
 
-# Language
-sonar.language=py
+# Comma-separated paths to source directories
+sonar.sources=.
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
