--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,6 @@ jobs:
       - name: Scan for security issues with bandit
         run: bandit -r . -ll 
 
-
       - name: Create junit directory
         run: mkdir -p junit 
 
@@ -53,8 +52,16 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2.2.0
+        with:
+          projectBaseDir: .
+          args: >
+            -Dsonar.organization=akshat200519
+            -Dsonar.projectKey=akshat200519_code_quality2
+            -Dsonar.sources=.
+            -Dsonar.sourceEncoding=UTF-8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
